# ADCO

./: .gitignore  ARCH.md  BACKEND_DOMAINS.md  CLAUDE.md  CONTEXT_SESSION_2025-09-16.md  Cargo.toml  README.md  SYSTEM_PROMT.md  docker-compose.yml  old_CLAUDE.md
app/: Cargo.toml  RIG_RESEARCH.md
app/learning_logs/: 2025-09-14.md  2025-09-15.md
app/src/: appstate.rs  lib.rs  main.rs
app/src/domain/: orchestrator.rs
app/src/domain/content/: chunker.rs
app/src/domain/infra/postgres/: posts_repo.rs
app/src/domain/llm/agents/: qa_controller.rs  topic_generator.rs
app/src/domain/posts/: mod.rs  repository.rs
app/src/domain/sources/: parser.rs  repository.rs
backend/: BACKLOG_IDEAS.md  Cargo.toml
backend/.sqlx/: query-107fb6f9d60eb04f5721ef2e8ba2da2e5b81ee80fde858d948e8d27c132e4f4a.json  query-1973d410e2481ebb701a8316c294f4361d8eda2e5f905b10ec42f1fc5e9bfb0d.json  query-25a989d33afda3ff52afe021f427f4d96460c2034bd4a448359d01c018668743.json  query-28c7a40e59c102d0fd63ed08d013aa72675bd30ece7d96232be1c5f2418c61f2.json  query-4f17c842c8407460631eca641dd51a5700463ba3d51a440c4fdaef2b9b9a87fe.json  query-688566b77a1fbee66d317a28b6adb3449140f9cbedea638f2a01a393fd5c1a15.json  query-7477039d7c421200b28e019ec4261c7f8dafaa83d5da474de59b3260bb17f13f.json  query-b6019471ff1989ef2f0658b0b34e683fdc706751e2bb69043544c9a4d08b5ba0.json
backend/learning_logs/: 2025-08-03.md  2025-08-04.md  2025-08-06.md  2025-09-13.md  2025-09-14.md  2025-09-16.md  2025-09-17.md
backend/posts/: post_2025-09-14_19-03-38.md
backend/posts/2025-09-16_19-14-32/: final_post.md  research.md  stylized_post.md
backend/src/: appstate.rs  lib.rs  main.rs
backend/src/domain/: mod.rs  orchestrator.rs
backend/src/domain/content/: chunker.rs  embeddings_repository.rs  mod.rs
backend/src/domain/infra/: mod.rs
backend/src/domain/infra/postgres/: mod.rs  posts_repo.rs  sources_repo.rs
backend/src/domain/llm/: mod.rs  rigtest.rs
backend/src/domain/llm/agents/: mod.rs  qa_controller.rs  researcher.rs  stylizer.rs  topic_generator.rs
backend/src/domain/posts/: models.rs  repository.rs
backend/src/domain/publishing/: mod.rs  publisher.rs
backend/src/domain/sources/: fetcher.rs  mod.rs  models.rs  parser.rs  repository.rs
frontend/: Cargo.toml  README.md
frontend/src/: app.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs  post.rs  source.rs
sql/: 01_init.sql
