[workspace]
members = [
    "backend",
    "frontend", 
    "shared",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["ADCO Team"]
license = "MIT"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.99"
axum = "0.8.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
console_error_panic_hook = "0.1"
leptos = "0.8.0"
leptos_axum = "0.8.0"
leptos_meta = "0.8.0"
leptos_router = "0.8.0"
log = "0.4.28"
serde_json = "1.0.144"
thiserror = "1.0.69"
tracing = "0.1.41"
wasm-bindgen = "=0.2.101"
dotenvy = "0.15.7"

[workspace.dependencies.chrono]
version = "0.4.42"
features = ["serde"]

[workspace.dependencies.serde]
version = "1.0.221"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.47.1"
features = [
    "full",
    "rt-multi-thread",
]

[workspace.dependencies.uuid]
version = "1.18.1"
features = [
    "v4",
    "serde",
    "js",  # для WASM совместимости
]
