[package]
name = "adco-backend"
version = "0.1.0"
edition = "2021"
authors = ["ADCO Team"]
description = "Async Dev Content Orchestrator - Backend API"
license = "MIT"

[dependencies]
# Web server
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"


# Database
sqlx = { version = "^0", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "^0", features = ["serialize"] }

# HTTP client for external APIs
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
scraper = "0.24"
headless_chrome = "1.0"
readability = "0.3"
pdf-extract = "0.7"

# RIG-LLM Integration
rig-core = "^0"
rig-postgres = "^0"

# Scheduling
tokio-cron-scheduler = "0.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Telegram bot
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.14"

# Environment variables
dotenvy = "0.15"

# Random
rand = "^0"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.12"

[profile.dev]
opt-level = 1      # немного оптимизации
incremental = true # инкрементальная компиляция
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
