[package]
name = "adco-backend"
version = "0.1.0"
edition = "2021"
authors = ["ADCO Team"]
description = "Async Dev Content Orchestrator - Backend API"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Web server
tower = "0.4.13"
tower-http = { version = "0.6.0", features = ["cors", "trace"] }
hyper = "1.7.0"
# OnceCell
once_cell = "0.2.4"
# Database
sqlx = { workspace = true }
adco-shared = { path = "../shared", features = ["backend"] }

uuid = { workspace = true }
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { version = "0.36.2", features = ["serialize"] }
# HTTP client for external APIs
reqwest = { version = "0.11.27", features = [
    "json",
    "rustls-tls",
], default-features = false }
scraper = "0.24.0"
headless_chrome = "1.0.18"
readability = "0.3.0"
pdf-extract = "0.7.12"
# RIG-LLM Integration
rig-core = "0.20.0"
rig-postgres = "0.1.19"
# Scheduling
tokio-cron-scheduler = "0.10.2"
# Time handling
chrono = { workspace = true }
# Telegram bot
teloxide = { version = "0.17.0", features = ["macros"] }
pretty_env_logger = "0.5.0"
# Logging and stdio
log = "0.4.28"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
# Error handling
thiserror = "1.0.69"
anyhow = { workspace = true }
# Configuration
config = "0.14.1"
# Environment variables
dotenvy = "0.15.7"
# Random
rand = "0.9.2"

axum = { version = "0.8.0" }
tokio = { version = "1", features = ["rt-multi-thread"] }


[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.12"

[profile.dev]
opt-level = 1      # немного оптимизации
incremental = true # инкрементальная компиляция
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
